--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -101,3 +101,8 @@
 .glyphicon {right:4px; top:0px;}
 
 .mr15 {margin-right:15px}
+
+.dataTable .glyphicon , .th-first {vertical-align: middle !important;}
+
+.switch-info {font-size:18px !important; color:#26b99a !important;}
+
