--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -104,11 +104,12 @@
 
 .dataTable .glyphicon , .th-first {vertical-align: middle !important;}
 
-.switch-info {font-size:18px !important; color:#26b99a !important; position:relative; top:6px;}
+.switch-info {font-size:18px !important;  position:relative; top:6px;}
 
 .dataTable .btn {margin-bottom: 0 !important; font-size:12px;}
 
 .dataTable td {vertical-align: middle !important; padding: 5px !important;}
 
 .ml-25 {margin-left:25px !important;}
+.dataTable .tr-gray {background-color: #f9f9f9;}
 
