--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -111,5 +111,6 @@
 .dataTable td {vertical-align: middle !important; padding: 5px !important;}
 
 .ml-25 {margin-left:25px !important;}
+.mt5 {margin-top:5px !important;}
 .dataTable .tr-gray {background-color: #f9f9f9;}
 
