--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -104,7 +104,8 @@
 
 .dataTable .glyphicon , .th-first {vertical-align: middle !important;}
 
-.switch-info {font-size:18px !important;  position:relative; top:6px;}
+.switch-info {font-size:18px !important;  position:relative; top:7px;}
+.mark-info {position:relative !important; top:-2px; left:15px;}
 
 .dataTable .btn {margin-bottom: 0 !important; font-size:12px;}
 
