--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,6 +5,8 @@
 @import "node_modules/datatables.net-bs/css/dataTables.bootstrap";
 @import "node_modules/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap";
 @import "node_modules/datatables.net-buttons-bs/css/buttons.bootstrap";
+@import "node_modules/select2/src/scss/core";
+@import "node_modules/select2-bootstrap-theme/src/select2-bootstrap";
 
 .nav-no .container.body .col-md-3.left_col {
   width: 0px;
