--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -117,3 +117,5 @@
 .mt5 {margin-top:5px !important;}
 .dataTable .tr-gray {background-color: #f9f9f9;}
 
+table.dataTable td.dataTables_empty, table.dataTable th.dataTables_empty {text-align: left !important;}
+
